k8s/service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: brewbook-nodeport
  labels:
    app: brewbook
spec:
  selector:
    app: brewbook
  ports:
    - name: http
      port: 80
      targetPort: 3000
      nodePort: 30080
      protocol: TCP
  type: NodePort
