k8s/service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: brewbook
  labels:
    app: brewbook
spec:
  selector: 
    app: brewbook 
  ports:
    - name: http
      port: 80
      targetPort: 3000
      protocol: TCP 
  type: ClusterIP
